# ImageCryptorCLI

./: CMakeLists.txt
include/: imcpyto.hpp
lib/imcryptolib/: CMakeLists.txt
lib/imcryptolib/include/: imcpyto.hpp
lib/imcryptolib/src/: imcrypto.cpp
src/: imcrypto.cpp  main.cpp
